2003-08-15 Tom Copeland  <tom@infoether.com>

	* www/include/languages/Base.tab:
	Fixed bug [ #487 ] Stats graph has funky title
	
2003-08-14 Michael Jennings  <mej@eterm.org>

	* gforge.spec:
	Updated to 3.0 release.

	* contrib/gforge-3.0-*.patch
	Patches resynced to 3.0 release.

	* contrib/gforge.conf
	Added Apache config file from SRPM.
	
2003-08-12 Tom Copeland  <tom@infoether.com>

	* common/include/User.class:
	Fixed bug [ #480 ] Confirmation email does not reflect language choice
	
2003-08-08 Tom Copeland  <tom@infoether.com>

	* www/search/index.php:
	Fixed bug [ #477 ] www/search/index.php ignores $limit
	
	* www/project/showfiles.php
	Fixed bug [ #377 ] OSX Theme: text is displayed twice

2003-08-05 Tom Copeland  <tom@infoether.com>

	* cronjobs/cvs-cron/history_parse.php:
	Converted from Perl to PHP.  Note that you can generate older stats
	by running it with an argument in days, like "./history_parse.php 120",
	which would populate the past 120 days of stats.

	* www/include/project_home.php:
	Fixed bug [ #476 ] Trove descriptions have slashes in them

2003-07-29 Christian Bayle	<bayle@debian.org>

	* Don't allow to go in QRS if no package is defined or activ
	in www/project/admin/editpackages.php
	Before you could go to qrs.php with no package
	defined, what was rather confusing, the only choice was to come back
	on editpackages.php by a non obvious link.
	* Some enhancement/correction when qrs.php fails (Try to keep as much 
	as possible already given datas)

2003-07-28 Tom Copeland  <tom@infoether.com>

	* www/snippet/detail.php:
	Fixed bug [ #459 ] Snippet formatting is a bit off

	* www/snippet/browse.php:
	Implemented feature[ #457 ] Snippet titles could be hyperlinked

2004-07-25  Reinhard Spisser <reinhard@spisser.it>

	* www/include/languages/Base.tab:
	Bug [455]: removed link to /docs/site


2003-07-24  Roland Mas  <99.roland.mas@aist.enst.fr>

	* www/include/languages/Dutch.tab: Dutch language update from
	Patrick Lemmens.
